fixed the alignment all pages and design

--- a/src/app/components/dash-board/dash-board.component.scss
+++ b/src/app/components/dash-board/dash-board.component.scss
@@ -227,4 +227,10 @@
       display: none;
     }
   }
+  &::ng-deep {
+    .mat-mdc-paginator-page-size {
+      display: none;
+      background-color: #00ff00;
+    }
+  }
 }
