--- a/src/app/components/feed-back/feed-back.component.scss
+++ b/src/app/components/feed-back/feed-back.component.scss
@@ -46,6 +46,50 @@
   }
 }
 
+.check-feedback-container {
+  padding: 20px;
+
+  app-table {
+    margin: 20px 0 0;
+    display: block;
+  }
+}
+
+.feedback-details-container {
+  padding: 20px;
+
+  h3 {
+    margin: 20px 0;
+  }
+
+  .feedback-data {
+    padding: 20px;
+    max-width: 600px;
+    background: #fff;
+    color: #000;
+    border-radius: 12px;
+    margin: 0 auto 20px auto;
+
+    p {
+      margin-bottom: 16px;
+
+      &:nth-last-child(1) {
+        margin: 0;
+      }
+
+      img {
+        width: 200px;
+        height: 200px;
+      }
+
+      label {
+        min-width: 100px;
+        font-weight: 500;
+      }
+    }
+  }
+}
+
 .table {
   &::ng-deep {
     > div {
