--- a/src/app/components/userlist/userlist.component.scss
+++ b/src/app/components/userlist/userlist.component.scss
@@ -34,3 +34,25 @@
     width: 100%;
   }
 }
+
+.user-client-main-container {
+  padding: 20px;
+  min-height: calc(100vh - 60px);
+
+  .heading {
+    margin-bottom: 20px;
+  }
+
+  .search-filter-field {
+    margin-bottom: 20px;
+    gap: 10px;
+
+    input {
+      max-width: 300px;
+    }
+  }
+
+  .user-list-table {
+    margin-top: 20px;
+  }
+}
