--- a/src/app/reusable/table/table.component.scss
+++ b/src/app/reusable/table/table.component.scss
@@ -43,3 +43,6 @@ table {
   width: 50px;
   height: 50px;
 }
+.cell-btn-group {
+  gap: 10px;
+}
